--- a/regionalization_with_infomap_comparison_study.Rmd
+++ b/regionalization_with_infomap_comparison_study.Rmd
@@ -34,13 +34,13 @@ write.input.info(da, path_write_Input, Input_name, edges_file, weighted = T)
 ```
 # Run Infomap
 ```{r}
-path.info <- "/mnt/c/R_projects/Hortal_collaboration/MAREANO_biogeography/infomap-ubuntu/"
+path.info <- "infomap-ubuntu"
 
 # Directorio donde esta el input
-path.in <- "/mnt/c/R_projects/Hortal_collaboration/MAREANO_biogeography/regionalization/"
+path.in <- "regionalization"
 
 # Directorio donde quieres guardar el output
-path.out <- "/mnt/c/R_projects/Hortal_collaboration/MAREANO_biogeography/regionalization/"
+path.out <- "regionalization"
           
 # -N X = numero de analisis
 # -s = seed
@@ -65,8 +65,8 @@ par.n <- run.infomap(path.info, path.in, Input_name, path.out, parameters)
 
 # Explore saved output
 ```{r}
-dir.info.out <- 'C:/R_projects/Hortal_collaboration/MAREANO_biogeography/regionalization/Ip_Benthos.tree'
-dir.edges <- 'C:/R_projects/Hortal_collaboration/MAREANO_biogeography/regionalization/edge_Benthos'
+dir.info.out <- 'regionalization/Ip_Benthos.tree'
+dir.edges <- 'regionalization/edge_Benthos'
             
 # :::::::::::::: 
 # Only the table
